# xmake-wheel

./: .gitignore  .npmignore  .pre-commit-config.yaml  README.md  biome.json  build.py  package-lock.json  package.json  pyproject.toml  shell.nix  template.rockspec  xmake.lua
.github/workflows/: luarocks.yml  main.yml  nodejs.yml  version.yml
assets/: xmake.lua
docs/nodejs/: README.md
docs/python/: README.md
examples/nodejs/1_hello_world/: README.md
examples/nodejs/1_hello_world/napi/: hello.c  xmake.lua
examples/nodejs/1_hello_world/node-addon-api/: xmake.lua
examples/nodejs/1_hello_world/node-addon-api-addon-class/: package.json
scripts/: build.cjs  build.py  install.js  test.sh  update-version.pl  xmake.lua
src/xmake/: __init__.py
