[build-system]
requires = ["xmake-python"]
build-backend = "xmake_python"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "xmake-wheel"
version = "2.9.9"
description = "A cross-platform build utility based on Lua"
readme = "README.md"
keywords = ["xmake"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[[project.authors]]
name = "ruki"
email = "waruqi@gmail.com"

[project.license]
text = "GPL v3"

[project.urls]
Homepage = "https://xmake.io/"
Download = "https://github.com/xmake-io/xmake-wheel/releases"
"Bug Report" = "https://github.com/xmake-io/xmake-wheel/issues"
Source = "https://github.com/xmake-io/xmake-wheel"

[tool.mdformat]
number = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = ["D205", "D400"]
preview = true

[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "\\s*import tomli as tomllib",
]

[tool.cibuildwheel]
archs = ["all"]
build = "cp312-*"
# src/xmake/libc/dataptr.c:49:26: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
# xmake doesn't support universal2
# https://github.com/xmake-io/xmake/issues/6502
skip = "*_i686 *_armv7l *-macosx_universal2"
build-frontend = "build[uv]"

[tool.cibuildwheel.environment]
XMAKE_ROOT = "y"
MACOSX_DEPLOYMENT_TARGET = "14.5"

# https://github.com/astral-sh/uv/issues/10260
[[tool.cibuildwheel.overrides]]
select = ["*-musllinux_s390x", "*-musllinux_ppc64*"]
build-frontend = "build"

[[tool.cibuildwheel.overrides]]
select = ["*-manylinux_*"]
before-all = "yum -y install gzip git"

[[tool.cibuildwheel.overrides]]
select = ["*-musllinux_*"]
before-all = "apk add gzip git"

[[tool.cibuildwheel.overrides]]
select = ["*-macosx_*"]
before-all = "brew install xmake gzip git"
